--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 							<div class="col-sm-6">
 								<ul class="social-icon">
 									<li>
-										<a target="_blank" href="https://instagram.com/anwarluck"><i
+										<a target="_blank" href="https://www.instagram.com/nasr531nk4"><i
 												class="fa fa-instagram"></i></a>
 									</li>
 									<li>
